infrastructure/configs/kanidm/kanidm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanidm-server
spec:
  selector:
    app: kanidm-server
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
  type: ClusterIP
