infrastructure/configs/kanidm/service-kanidm.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanidm
  namespace: kanidm
spec:
  type: LoadBalancer
  loadBalancerIP: 172.21.0.3
  ports:
    - port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: kanidm
