infrastructure/configs/kanidm/ingress-kanidm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanidm
  namespace: kanidm
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-wildcard-cert-xrs444.net"
spec:
  tls:
  - hosts:
    - idm.xrs444.net
    secretName: letsencrypt-wildcard-cert-xrs444.net
  rules:
  - host: idm.xrs444.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kanidm-kanidm-kanidm
            port:
              number: 443
